(We are aware of issues with oireachtas and tv3 for out of region operations)

2016-02-02
added service reference to csv database.

To avoid confusion over reader files being used,
added reader Build timestamp into generated csv database
reader build timestamps can be checked via command line:
[code]
cd /usr/lib/enigma2/python/Plugins/Extensions/AutoBouquets
for arch in mips arm sh4;do strings autobouquetsreader_$arch|grep Build;done
[/code]

2016-03-11
Add numeric shortcut keys to aid WeTek Play Classic RCU.
ALL ARCH reverted back to STB arch only single autobouquetsreader.
Sources now available for dedicated *.ipk arch building via GitHub:
https://github.com/LraiZer/AutoBouquets

2016-03-31
BBC One/Three changes in swap and custom files

2016-04-11
Limit for HD first bouquet fixed
Swap file edited. If you are not in England edit for your region.

2016-08-06
Rework supplement function, service position is now optional for flag changes.
add patch to allow first found only channelid to be added to BAT3 TEST data,
this should stop overwrit of multiple service postions for regional variations.

2016-08-18
add support for writing lamedb version 5, add check for version in current lamedb.

2016-09-04
Removed the "not set" area. User can still set area
Sort 3 changes

2016-10-17
Remove ITV Encore HD from whitelist/swap

2017-03-18
Alter International range

2017-04-12
allow reassign channel position via channel_id reference

2017-04-14
Supplement/sort 3 changes

2017-04-17
fix channel position reassign via supplement.txt
fix scan mode FTA Only

2017-04-19
Move unavailable channels to "other" bouquet

2017-04-25
Move more unavailable channels to "other" bouquet

2017-05-16
Move more unavailable channels to "other" bouquet

2017-09-01
Whitelist more services
Move more unavailable channels to "other" bouquet
Cosmetic changes to order of TSIDs
Some swap changes

2017-10-30
Hardcode some entries in supplement as not being picked up with EPG ID alone