@@ -334,3 +334,6 @@ Some swap changes
 
 2017-10-30
 Hardcode some entries in supplement as not being picked up with EPG ID alone
+
+2018-01-29
+Add "Description" for hint text as that is what most other plugins use
